# exotica-core

./: README.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_seed_data.py  0003_add_parties.py  0004_add_vendors.py  0005_epic_g_inventory_intelligence.py
backend/app/: main.py
backend/app/core/: config.py  db.py  exceptions.py  security.py
backend/app/dependencies/: auth.py  pagination.py  permissions.py
backend/app/models/: __init__.py  party.py  product.py  settings.py  transaction.py  user.py  vendor.py
backend/app/routers/: auth.py  parties.py  products.py  reports.py  settings.py  transactions.py  vendors.py
backend/app/schemas/: common.py  party.py  product.py  reports.py  settings.py  transaction.py  user.py  vendor.py
backend/app/services/: auth.py  inventory.py  inventory_intelligence.py  orders.py  parties.py  pricing.py  products.py  receivables.py  reports.py  returns.py  vendors.py
backend/app/tests/: conftest.py
backend/app/tests/test_routers/: test_auth_and_permissions.py
backend/app/tests/test_services/: test_inventory.py  test_orders.py  test_pricing.py  test_receivables.py  test_returns.py
backend/scripts/: create_first_user.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: auth.js  client.js  parties.js  products.js  reports.js  settings.js  vendors.js  (+2 more)
requirements/: Exotica-BRD-v1.md
(+45 files in other folders)
