[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "bcrypt==4.0.1",
    "fastapi==0.115.6",
    "greenlet>=3.5.3",
    "gunicorn==23.0.0",
    "httpx==0.28.1",
    "passlib[bcrypt]==1.7.4",
    "psycopg2>=2.9.12",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart>=0.0.32",
    "ruff==0.8.3",
    "sqlalchemy==2.0.36",
    "typer==0.15.1",
    "uvicorn[standard]==0.32.1",
]
